plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.web3j" version "4.14.0"
	id "org.web3j.solidity" version "0.6.0"
}

group = 'utcluj.stiinte'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6")
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	
	// Database
	runtimeOnly 'com.h2database:h2'
	
	// Google
	implementation 'com.google.api-client:google-api-client:2.0.0'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
	implementation 'com.google.apis:google-api-services-calendar:v3-rev20220715-2.0.0'
	implementation 'com.google.apis:google-api-services-gmail:v1-rev20220404-2.0.0'

	// Blockchain
	implementation 'org.web3j:core:4.14.0'
	
	// Utils
	implementation("org.apache.commons:commons-csv:1.14.0")
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	
	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation("org.springframework.security:spring-security-test:6.5.1")
}

tasks.named('test') {
	useJUnitPlatform()
}

// https://github.com/LFDT-web3j/web3j-gradle-plugin
web3j {
	generatedPackageName = "utcluj.stiinte.blockchain.contract"
	solidity.evmVersion = "london"
}

// https://github.com/LFDT-web3j/web3j-solidity-gradle-plugin
sourceSets {
	main {
		solidity {
			output.resourcesDir = file('out/bin/compiledSol')
		}
	}
}


